<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    tools:context=".MainActivity"
    >

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#01DF74"
        android:minHeight="?attr/actionBarSize">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:fontFamily="@font/ygotjalnanfont"
            android:text="@string/app_name"
            android:textColor="#ffffff"
            android:textSize="10pt" />
    </android.support.v7.widget.Toolbar>

    <View
        android:layout_width="match_parent"
        android:layout_height="20px"
        android:background="#E6E6E6"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:fontFamily="@font/ygotjalnanfont"
            android:text="@string/main"
            android:background="#CEF6F5"
            android:textColor="#000000"
            android:textSize="10pt"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#CEF6F5"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#CEF6F5"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:fontFamily="@font/h2mkpb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:textColor="#111111"
                    android:text="@string/main_1"
                    />

                <TextView
                    android:fontFamily="@font/h2mkpb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:textColor="#111111"
                    android:text="@string/main_2"
                     />

                <TextView
                    android:fontFamily="@font/h2mkpb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/main_3"
                    android:textColor="#111111"
                    />

                <TextView
                    android:fontFamily="@font/h2mkpb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/main_4"
                    android:textColor="#111111"
                    />

                <TextView
                    android:fontFamily="@font/h2mkpb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/tip_1"
                    android:textColor="#111111"
                   />

                <TextView
                    android:fontFamily="@font/h2mkpb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/tip"
                    android:textColor="#111111"
                    />



            </LinearLayout>
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    >
            <ImageButton
                android:background="#CEF6F5"
                android:id="@+id/dilogButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/jungbo" />
    <ImageButton
        android:background="#CEF6F5"
        android:id="@+id/dilogButton2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10pt"
        android:src="@drawable/jungbo" />

</LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="15px"
        android:layout_marginBottom="10dp"
        android:background="#E6E6E6"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bak"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.3"
            android:orientation="horizontal"
            android:gravity="center"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="월: "
                android:padding="10dp"
                android:fontFamily="@font/h2mkpb"
                android:textColor="#111111"
                android:textSize="10pt" />

            <EditText
                android:id="@+id/myMoth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:hint="예: 1"
                android:inputType="number" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25pt"
                android:text="일: "
                android:fontFamily="@font/h2mkpb"
                android:padding="10dp"
                android:textColor="#111111"
                android:textSize="10pt" />

            <EditText
                android:id="@+id/myDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:hint="예: 21"
                android:inputType="number" />
        </LinearLayout>

        <RadioGroup
            android:id="@+id/radioGourp1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.2"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/genderMan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="남"
                android:padding="10dp"
                android:textColor="#2E64FE"
                android:fontFamily="@font/netmarbleb"
                android:textSize="15pt" />

            <RadioButton
                android:id="@+id/genderWomun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="여"
                android:textColor="#FE2E2E"
                android:fontFamily="@font/netmarbleb"
                android:textSize="15pt" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/radioGourp2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.2"
            android:gravity="center"
            android:orientation="horizontal"
            >
            <RadioButton
                android:id="@+id/Abutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="A형"
                android:fontFamily="@font/netmarbleb"
                android:textColor="#111111"
                android:textSize="10pt" />
            <RadioButton
                android:id="@+id/Bbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="B형"
                android:fontFamily="@font/netmarbleb"
                android:textColor="#111111"
                android:textSize="10pt" />

            <RadioButton
                android:id="@+id/Obutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="O형"
                android:fontFamily="@font/netmarbleb"
                android:textColor="#111111"
                android:textSize="10pt" />
            <RadioButton
                android:id="@+id/ABbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="AB형"
                android:fontFamily="@font/netmarbleb"
                android:textColor="#111111"
                android:textSize="10pt" />
        </RadioGroup>

        <Button
            android:id="@+id/matchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="10dp"
            android:text="검색 하기"
            android:textSize="10pt"
            android:layout_weight="0.2"
            android:fontFamily="@font/mh"
            />

        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="ca-app-pub-3940256099942544/6300978111">
        </com.google.android.gms.ads.AdView>

    </LinearLayout>
</LinearLayout>